crates/module-graph/tests/snapshots/json_test__json__primitive.snap
---
source: crates/module-graph/tests/json_test.rs
expression: "generate_graph_for_file(sandbox.path(), \"primitive.json\")"
---
{
    1: Module {
        exports: [
            Export {
                kind: Native,
                module_id: None,
                source: None,
                span: None,
                symbols: [
                    ExportedSymbol {
                        kind: Default,
                        symbol_id: None,
                        name: "default",
                    },
                ],
                type_only: false,
            },
        ],
        fragment: None,
        id: 1,
        imports: [],
        package_name: None,
        path: "/root/primitive.json",
        query: None,
        source: JsonModule {
            data: String("abc"),
            source: "\"abc\"\n",
        },
    },
}
